--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
 <div id="test"></div>
-<script type="text/javascript" src="xslt.js"></script>
+<script type="text/javascript" src="js/xslt.js"></script>
 <script type="text/javascript">
 window.onload = function() {
-	new Transformation().setXml("instructions.xml").setXslt("index.xsl").transform("test");
+	new Transformation().setXml("instructions.xml").setXslt("xsl/index.xsl").transform("test");
 }
 </script>
 </body>
